# postit

./: Cargo.toml  README.md  postit.desktop
examples/: focus_probe.rs  outputs_probe.rs  tray_probe.rs
plans/: 2026-07-03-postit-mvp.md
protocols/: cosmic-toplevel-info-unstable-v1.xml
src/: app.rs  colors.rs  focus.rs  icons.rs  list_view.rs  main.rs  note.rs  note_view.rs  outputs.rs  settings.rs  storage.rs  toolbar.rs  tray.rs
